Adición de metodos para crud en la capa datos y adicion de datos a las clases de la capa entidad

--- a/CapaEntidad/CapaEntidad.csproj
+++ b/CapaEntidad/CapaEntidad.csproj
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>6fac0777-e178-4bcb-bff6-94608fea7494</ProjectGuid>
+    <ProjectGuid>{6FAC0777-E178-4BCB-BFF6-94608FEA7494}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CapaEntidad</RootNamespace>
@@ -31,24 +31,29 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System"/>
-    
-    <Reference Include="System.Core"/>
-    <Reference Include="System.Xml.Linq"/>
-    <Reference Include="System.Data.DataSetExtensions"/>
-    
-    
-    <Reference Include="Microsoft.CSharp"/>
-    
-    <Reference Include="System.Data"/>
-    
-    <Reference Include="System.Net.Http"/>
-    
-    <Reference Include="System.Xml"/>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="EN_Area.cs" />
+    <Compile Include="EN_Bitacora.cs" />
+    <Compile Include="EN_Carrera.cs" />
+    <Compile Include="EN_CategoriaHerramienta.cs" />
+    <Compile Include="EN_ControlUsuario.cs" />
+    <Compile Include="EN_DetallePrestamo.cs" />
+    <Compile Include="EN_Edificio.cs" />
+    <Compile Include="EN_Herramienta.cs" />
+    <Compile Include="EN_MarcaHerramienta.cs" />
+    <Compile Include="EN_Prestamo.cs" />
+    <Compile Include="EN_TipoUsuario.cs" />
+    <Compile Include="EN_Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
- </Project>
+</Project>
