Conexion con la BD
Se conecto a la base de datos correctamente, esto con una prueba de listar la tabla de categoria, tambien ya se ha agregado el archivo de Procedimientos Almacenados

--- a/CapaDatos/CapaDatos.csproj
+++ b/CapaDatos/CapaDatos.csproj
@@ -46,6 +46,7 @@
     <Compile Include="BD_Bitacora.cs" />
     <Compile Include="BD_Carrera.cs" />
     <Compile Include="BD_CategoriaHerramienta.cs" />
+    <Compile Include="BD_Conexion.cs" />
     <Compile Include="BD_ControlUsuario.cs" />
     <Compile Include="BD_DetallePrestamo.cs" />
     <Compile Include="BD_Edificio.cs" />
