--- a/SistemaWeb_UnidadPracticas/Web.config
+++ b/SistemaWeb_UnidadPracticas/Web.config
@@ -4,6 +4,12 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+	
+	<connectionStrings>
+		<!--para escribir la cadena de conexion y realizarla Data Source=NOTEBOOK-A;Initial Catalog=DB_SistemaCarrito;Integrated Security=True-->
+		<add name="cadena" providerName="System.Data.ProviderName" connectionString="Data Source=Desktop-80\DAVID;Initial Catalog=UDP_CONTROL;Integrated Security=True" />
+	</connectionStrings>
+		
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
